django-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django-app
    version: 1.0.0
    owner: Yurii
spec:
  selector:
    matchLabels:
      app: django-k8s
  template:
    metadata:
      labels:
        app: django-k8s
    spec:
      containers:
        - name: django-app
          image: django_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    env: production
    owner: Yurii
spec:
  selector:
    app: django-k8s
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: app-listener

  type: NodePort
